; ModuleID = '/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_task_suspend_resume.c_control_task.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/freertos/test/extr_test_task_suspend_resume.c_control_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [27 x i8] c"Start control_task cpu=%d\0A\00", align 1
@waiting_ms = common dso_local global i32 0, align 4
@delta_ms = common dso_local global i32 0, align 4
@duration_ctrl_task_ms = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [40 x i8] c"Finish control_task cpu=%d, time=%d ms\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @control_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @control_task(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = call i32 (...) @xPortGetCoreID()
  store i32 %5, i32* %3, align 4
  %6 = call i32 @ets_delay_us(i32 2000)
  %7 = load i32, i32* %3, align 4
  %8 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = call i32 (...) @esp_timer_get_time()
  store i32 %9, i32* %4, align 4
  %10 = call i32 (...) @suspend_scheduler_on_both_cpus()
  %11 = load i32, i32* @waiting_ms, align 4
  %12 = mul nsw i32 %11, 1000
  %13 = load i32, i32* @delta_ms, align 4
  %14 = mul nsw i32 %13, 1000
  %15 = add nsw i32 %12, %14
  %16 = call i32 @ets_delay_us(i32 %15)
  %17 = call i32 (...) @resume_scheduler_on_both_cpus()
  %18 = call i32 (...) @esp_timer_get_time()
  %19 = load i32, i32* %4, align 4
  %20 = sub nsw i32 %18, %19
  %21 = sdiv i32 %20, 1000
  store i32 %21, i32* @duration_ctrl_task_ms, align 4
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @duration_ctrl_task_ms, align 4
  %24 = call i32 (i8*, i32, ...) @printf(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0), i32 %22, i32 %23)
  %25 = call i32 @vTaskDelete(i32* null)
  ret void
}

declare dso_local i32 @xPortGetCoreID(...) #1

declare dso_local i32 @ets_delay_us(i32) #1

declare dso_local i32 @printf(i8*, i32, ...) #1

declare dso_local i32 @esp_timer_get_time(...) #1

declare dso_local i32 @suspend_scheduler_on_both_cpus(...) #1

declare dso_local i32 @resume_scheduler_on_both_cpus(...) #1

declare dso_local i32 @vTaskDelete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
